--- a/Services/MainMenu/templates/default/tpl.main_menu.html
+++ b/Services/MainMenu/templates/default/tpl.main_menu.html
@@ -11,7 +11,7 @@
 			<div class="ilTopMemberView"><h3>{MEMBER_VIEW_INFO}</h3></div>
 			<!-- END member_view_bl -->
 				<!-- BEGIN topbar_icons_bl -->
-				<ul id="ilTopBarNav" class="">					
+				<ul id="ilTopBarNav" class="">
 					<!-- BEGIN status_box -->
 						<li>{GLYPH}</li>
 					<!-- END status_box -->
@@ -37,6 +37,10 @@
 							<span>{USER_IMG}<!--{USERNAME}--><span class="caret"></span></span>
 						</a>
 						<ul class="dropdown-menu pull-right" role="menu">
+							<li>
+								<a target="_top">{USERNAME} [{LOGIN}]</a>
+							</li>
+								<li role="presentation" class="divider"></li>
 							<li>
 								<a href="{USR_LINK_PROFILE}" target="_top">{USR_TXT_PROFILE}</a>
 							</li>
@@ -92,7 +96,7 @@
 <div class="container-fluid ilContainerWidth">
 	<div class="row">
 		<nav id="ilTopNav" class="navbar navbar-default" role="navigation">
-			
+
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#ilMainMenuEntries">
@@ -107,9 +111,9 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="ilMainMenuEntries">
 					{MAIN_MENU_LIST_ENTRIES}
-					
+
 				</div><!-- /.navbar-collapse -->
-			
+
 		</nav>
 
 		<!-- BEGIN screen_id -->
