Passwort-Links ausblenden

--- a/Services/Init/templates/default/tpl.login.html
+++ b/Services/Init/templates/default/tpl.login.html
@@ -24,9 +24,9 @@
 	</p>
 	<!-- END ilias_login -->
 	<!-- BEGIN reg_links -->
-	<p class="ilStartupSection">
+	<!--p class="ilStartupSection">
 		{REG_PWD_CLIENT_LINKS}
-	</p>
+	</p-->
 	<!-- END reg_links -->
 	<!-- BEGIN agreement -->
 	<p>
